overflow issues for container

--- a/less/celestrium-defaults.less
+++ b/less/celestrium-defaults.less
@@ -1,5 +1,6 @@
 body {
     font-family: "Trebuchet MS";
+    overflow: hidden;
 }
 
 /* plugin container */
@@ -9,9 +10,10 @@ body {
     padding: 2px;
     box-sizing: border-box;
     right: 10px;
-    overflow: hidden;
+    overflow: scroll;
     min-width: 240px;
     height: 100%;
+    max-height: 100%;
 
     .plugin-wrapper {
         width: 100%;
